--- a/blocks/page.css
+++ b/blocks/page.css
@@ -7,4 +7,16 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   margin: 45px 200px 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  align-self: center;
+}
+
+@media screen and (min-width: 1281px) {
+  .page {
+    margin: 45px auto 0 auto;
+  }
 }
