--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,8 +1,10 @@
 .header {
-  max-width: 880px;
+  width: 880px;
   border: none;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .header__logo {
