--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  max-width: 880px;
+  width: 880px;
   margin-top: 36.25px;
   display: flex;
   color: #ffffff;
@@ -8,28 +8,26 @@
   height: 120px;
 }
 
-.profile__container {
-  display: flex;
-}
-
 .profile__image {
   max-width: 120px;
   max-height: 120px;
-  /* padding: 3.75px 26.25px 3.75px 22.5px; */
   border-radius: 50%;
   margin-right: 30px;
 }
 
 .profile__info {
-  /* margin: 22px 0 21px 3.75px; */
   margin: 22px 0 21px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 415px;
 }
 
 .profile__person {
   display: flex;
   gap: 18px;
   align-items: flex-end;
-  margin-bottom: 16px;
+  margin-bottom: 9px;
 }
 
 .profile__name {
@@ -54,9 +52,11 @@
   padding: calc(9px + (10px / 5));
   border: 1px solid #ffffff;
   box-sizing: border-box;
+  background-size: 10px 10px;
   margin-bottom: 9px;
   transition: opacity 0.3s ease-out;
-  cursor: pointer;
+  cursor: url("../images/pointer.svg"), pointer;
+  margin-top: 13px;
   max-height: 24px;
   max-width: 24px;
 }
@@ -72,7 +72,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  margin: 0;
+  margin: 0 auto 0 0;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -90,7 +90,7 @@
   border-radius: 2px;
   box-sizing: border-box;
   transition: opacity 0.3s ease-out;
-  cursor: pointer;
+  cursor: url("../images/pointer.svg"), pointer;
   margin: 35px 0 35px auto;
 }
 
