feat:postcards-postcard

--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,6 @@
 @import url("../blocks/content.css");
 
 @import url("../blocks/profile.css");
+
+@import url("../blocks/postcards.css");
+@import url("../blocks/postcard.css");
