--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,5 +1,4 @@
 .content {
   max-width: 880px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  margin: 0 auto;
+  font-family: "Inter", Arial, sans-serif;
 }
