--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -32,7 +32,7 @@
 
 .profile__name {
   max-width: 373px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
@@ -67,7 +67,7 @@
 
 .profile__description {
   max-width: 415px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
