--- a/blocks/header.css
+++ b/blocks/header.css
@@ -12,3 +12,35 @@
   max-height: 33px;
   margin-bottom: 41px;
 }
+
+@media screen and (max-width: 930px) {
+  .header {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .header__logo {
+    margin-left: 38px;
+    /* max-width: 126px;
+    max-height: 24px; */
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .header {
+    margin-left: -19px;
+    width: calc(100vw + 19px);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    width: 320px;
+  }
+
+  .header__logo {
+    max-width: 126px;
+    max-height: 24px;
+  }
+}
