--- a/pages/index.css
+++ b/pages/index.css
@@ -12,3 +12,6 @@
 @import url("../blocks/postcard.css");
 
 @import url("../blocks/footer.css");
+
+@import url("../blocks/popup.css");
+@import url("../blocks/form.css");
