--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -86,7 +86,7 @@
   background-size: 22px 22px;
   /* padding: 23px 73px; */
   padding: calc(12px + (22px / 2)) calc(62px + (22px / 2));
-  border: solid 2px #fff;
+  border: 2px solid #fff;
   border-radius: 2px;
   box-sizing: border-box;
   transition: opacity 0.3s ease-out;
@@ -96,4 +96,81 @@
 
 .profile__add-button:hover {
   opacity: 0.6;
+}
+
+@media screen and (min-width: 730px) and (max-width: 916px) {
+  .profile {
+    width: 100%;
+    max-width: 700px;
+  }
+}
+
+@media screen and (max-width: 729px) {
+  .profile {
+    flex-direction: column;
+    width: 590px;
+    height: 280px;
+  }
+
+  .profile__image {
+    margin-right: 0;
+  }
+
+  .profile__person {
+    justify-content: center;
+  }
+
+  .profile__description {
+    margin: 0 auto;
+  }
+
+  .profile__add-button {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 619px) {
+  .profile {
+    margin-top: 38.25px;
+    margin-bottom: 36px;
+    height: 286px;
+    width: 100%;
+    /* gap: 33px; */
+  }
+
+  .profile__info {
+    max-width: 282px;
+    align-items: center;
+    margin: 30px 0 36px 0;
+  }
+
+  .profile__person {
+    gap: 10px;
+    margin-bottom: 14px;
+  }
+
+  .profile__name {
+    font-size: 22px;
+    line-height: 27px;
+    text-align: center;
+  }
+
+  .profile__edit-button {
+    margin-bottom: 4px;
+    padding: calc(6px + (10px / 5));
+    background-size: 7px 7px;
+  }
+
+  .profile__description {
+    max-width: 282px;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    margin: 0;
+    box-sizing: border-box;
+  }
 }
