--- a/blocks/page.css
+++ b/blocks/page.css
@@ -6,7 +6,8 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-  margin: 45px 200px 60px;
+  /* margin: 45px 200px 60px; */
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,9 +16,9 @@
   align-self: center;
 }
 
-@media screen and (min-width: 1281px) {
+/* @media screen and (min-width: 1281px) {
   .page {
-    margin: 45px auto 0;
+    margin: 45px 200px 60px;
   }
 }
 
@@ -37,4 +38,4 @@
   .page {
     margin: 28px 0 0;
   }
-}
+} */
