--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,7 +4,8 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
   box-sizing: border-box;
-  margin: 0;
+  margin: 0 auto;
+  padding-top: 45px;
 }
 
 .header__logo {
@@ -13,34 +14,35 @@
   margin-bottom: 41px;
 }
 
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 730px) {
   .header {
     width: 100%;
   }
-}
 
-@media screen and (max-width: 730px) {
   .header__logo {
     margin-left: 38px;
-    /* max-width: 126px;
-    max-height: 24px; */
   }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (min-width: 320px) and (max-width: 619px) {
   .header {
     margin-left: -19px;
     width: calc(100vw + 19px);
+    padding-top: 38px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
     width: 320px;
+    padding-top: 28px;
+    margin: 0 auto;
   }
 
   .header__logo {
     max-width: 126px;
     max-height: 24px;
+    margin-bottom: 32px;
+    margin-left: 27px;
   }
 }
