--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,6 @@
 .header {
-  width: 880px;
+  max-width: 880px;
+  width: 100%;
   border: none;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
@@ -14,6 +15,12 @@
   margin-bottom: 41px;
 }
 
+@media screen and (min-width: 731px) {
+  .header__logo {
+    margin-left: 19px;
+  }
+}
+
 @media screen and (max-width: 730px) {
   .header {
     width: 100%;
@@ -26,8 +33,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 619px) {
   .header {
-    margin-left: -19px;
-    width: calc(100vw + 19px);
+    /* margin-left: -19px; */
+    max-width: calc(100vw + 19px);
     padding-top: 38px;
   }
 }
