--- a/blocks/postcard.css
+++ b/blocks/postcard.css
@@ -10,7 +10,7 @@
   object-fit: cover;
   display: block;
   border-radius: 10px 10px 0 0;
-  min-height: 286px;
+  max-height: 282px;
 }
 
 .postcard__title-area {
