--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -6,11 +6,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
-  opacity: 0;
 }
 
 .popup_receptive {
