--- a/blocks/header.css
+++ b/blocks/header.css
@@ -22,10 +22,6 @@
 }
 
 @media screen and (max-width: 730px) {
-  .header {
-    width: 100%;
-  }
-
   .header__logo {
     margin-left: 38px;
   }
@@ -33,7 +29,6 @@
 
 @media screen and (min-width: 320px) and (max-width: 619px) {
   .header {
-    /* margin-left: -19px; */
     max-width: calc(100vw + 19px);
     padding-top: 38px;
   }
@@ -41,9 +36,8 @@
 
 @media screen and (max-width: 320px) {
   .header {
-    width: 320px;
+    max-width: 320px;
     padding-top: 28px;
-    margin: 0 auto;
   }
 
   .header__logo {
