--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -106,6 +106,10 @@
     max-width: 410px;
   }
 
+  .profile__name {
+    font-size: 38px;
+  }
+
   .profile__edit-button {
     margin-right: 15px;
   }
@@ -175,6 +179,5 @@
   .profile__add-button {
     width: 100%;
     margin: 0;
-    box-sizing: border-box;
   }
 }
