--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -20,6 +20,8 @@
   .footer__copyrights {
     min-width: 581px;
     margin: 0;
+    font-size: 16px;
+    line-height: 20px;
   }
 }
 
@@ -32,5 +34,10 @@
 @media screen and (max-width: 320px) {
   .footer {
     margin: 50px 19px 36px;
+  }
+
+  .footer__copyrights {
+    font-size: 14px;
+    line-height: 17px;
   }
 }
