--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: none;
   justify-content: center;
   align-items: center;
@@ -25,8 +25,6 @@
   padding: 34px 36px 36.51px;
   border-radius: 10px;
   position: relative;
-  align-self: flex-start;
-  margin-top: 192px;
 }
 
 .popup__close-button {
