--- a/blocks/postcard.css
+++ b/blocks/postcard.css
@@ -2,6 +2,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  position: relative;
 }
 
 .postcard__image {
@@ -9,7 +10,28 @@
   object-fit: cover;
   display: block;
   border-radius: 10px 10px 0 0;
-  max-height: 282px;
+  height: 282px;
+  cursor: pointer;
+}
+
+.postcard__remove-button {
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  background-image: url("../images/trash-icon.svg");
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: url("../images/pointer.svg"), pointer;
+  border: none;
+  min-width: 18px;
+  min-height: 19.3px;
+  transition: all 0.3s ease-in-out;
+}
+
+.postcard__remove-button:hover {
+  opacity: 0.6;
 }
 
 .postcard__title-area {
@@ -51,10 +73,14 @@
   min-width: 21px;
   min-height: 19px;
   cursor: url("../images/pointer.svg"), pointer;
+  transition: all 0.2s linear;
 }
 
 .postcard__like-button:hover {
   opacity: 0.5;
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
 }
 
 .postcard__like-button_active {
