--- a/src/blocks/postcard.css
+++ b/src/blocks/postcard.css
@@ -28,10 +28,12 @@
   min-width: 18px;
   min-height: 19.3px;
   transition: all 0.3s ease-in-out;
+  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
 }
 
 .postcard__remove-button:hover {
   opacity: 0.6;
+  filter: drop-shadow(4px 4px 1px #000);
 }
 
 .postcard__title-area {
@@ -86,3 +88,11 @@
 .postcard__like-button_active {
   background-image: url("../images/heart-icon_stuffed.svg");
 }
+
+/* .postcard__like-counter {
+  color: #000;
+  text-align: center;
+  margin-top: 3px;
+  font-size: 13px;
+  line-height: 16px;
+} */
