--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -8,10 +8,11 @@
 }
 
 .profile__image {
-  max-width: 120px;
-  max-height: 120px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   margin-right: 30px;
+  object-fit: cover;
 }
 
 .profile__info {
