card remove popup and modify bin icons

--- a/src/blocks/form.css
+++ b/src/blocks/form.css
@@ -76,6 +76,12 @@
   cursor: default;
 }
 
+.form__button_type_remove-postcard {
+  padding: 14px 124px;
+  line-height: 21.78px;
+  margin-top: 0;
+}
+
 @media screen and (max-width: 524px) {
   .form {
     max-width: none;
