--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -84,6 +84,11 @@
   margin: 0;
 }
 
+.popup__overlay_type_remove-postcard {
+  gap: 38px;
+  padding: 34px 36px 36px 36px;
+}
+
 @media screen and (max-width: 524px) {
   .popup {
     box-sizing: border-box;
@@ -117,6 +122,15 @@
     top: -40px;
     right: -40px;
   }
+
+  .popup__overlay_type_remove-postcard {
+    gap: 36px;
+  }
+
+  .popup__title_type_remove-postcard {
+    text-align: center;
+    font-size: 21px;
+  }
 }
 
 @media screen and (max-width: 425px) {
@@ -149,5 +163,9 @@
     top: -30px;
     width: 30px;
     height: 30px;
+  }
+
+  .popup__overlay_type_remove-postcard {
+    gap: 33px;
   }
 }
