--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -7,12 +7,44 @@
   align-items: center;
 }
 
+.profile__image-overlay {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin-right: 30px;
+  object-fit: cover;
+  position: relative;
+}
+
+.profile__image-overlay::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  transition: background-color 0.4s linear;
+  z-index: 4;
+}
+
+.profile__image-overlay:hover::before {
+  background-color: rgba(0, 0, 0, 0.8);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("../images/edit-button.svg");
+  background-size: 26px;
+}
+
 .profile__image {
   width: 120px;
   height: 120px;
   border-radius: 50%;
   margin-right: 30px;
   object-fit: cover;
+  position: relative;
 }
 
 .profile__info {
