--- a/src/blocks/postcards.css
+++ b/src/blocks/postcards.css
@@ -7,3 +7,9 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (min-width: 730px) and (max-width: 916px) {
+  .postcards__list {
+    grid-template-columns: repeat(auto-fit, 260px);
+  }
+}
