--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -11,7 +11,6 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin-right: 30px;
   object-fit: cover;
   position: relative;
 }
@@ -27,7 +26,7 @@
   background-repeat: no-repeat;
   cursor: pointer;
   transition: background-color 0.4s linear;
-  z-index: 4;
+  z-index: 5;
 }
 
 .profile__image-overlay:hover::before {
@@ -45,7 +44,6 @@
   margin-right: 30px;
   object-fit: cover;
   position: relative;
-  z-index: 1;
   visibility: hidden;
 }
 
@@ -55,6 +53,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 415px;
+  margin-left: 30px;
 }
 
 .profile__person {
@@ -135,6 +134,7 @@
 @media screen and (min-width: 730px) and (max-width: 916px) {
   .profile {
     width: 100%;
+    gap: 30px;
   }
 
   .profile__info {
